Made unit tests to improve coverage of all to 100%